[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/hud/JumpButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/hud/Joystick.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/hud/GameOver.png" type="Texture" id=3]
[ext_resource path="res://assets/hud/Win.png" type="Texture" id=4]
[ext_resource path="res://scripts/hud/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/hud/OptionButton.png" type="Texture" id=6]
[ext_resource path="res://scenes/hud/PauseMenu.tscn" type="PackedScene" id=7]

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Joystick" parent="." instance=ExtResource( 2 )]
position = Vector2( 95.321, 511.371 )

[node name="JumpButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 883.102, 463.158 )
scale = Vector2( 0.497331, 0.513546 )

[node name="GameOver" type="Sprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 515.235, 280.332 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Win" type="Sprite" parent="."]
visible = false
position = Vector2( 500.831, 281.44 )
texture = ExtResource( 4 )

[node name="OptionsButton" type="TouchScreenButton" parent="."]
position = Vector2( 913.695, 15.5083 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 6 )

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]

[node name="InvisiblityBackground" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -600.0
margin_bottom = -600.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="main_menu_pressed" from="PauseMenu" to="." method="_on_PauseMenu_main_menu_pressed"]
[connection signal="restart_pressed" from="PauseMenu" to="." method="_on_PauseMenu_restart_pressed"]
[connection signal="resume_pressed" from="PauseMenu" to="." method="_on_PauseMenu_resume_pressed"]
[connection signal="gui_input" from="InvisiblityBackground" to="." method="_on_InvisiblityBackground_gui_input"]
